applications/prd/reports/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reports-prd
  labels:
    app: reports
    environment: production
