applications/prd/reports/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reports
  namespace: reports-prd
  labels:
    app: reports
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: reports
  template:
    metadata:
      labels:
        app: reports
    spec:
      imagePullSecrets:
      - name: ghcr-pull-secret
      volumes:
      - name: keyvault-env
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: reports-keyvault-env
      containers:
      - name: reports
        image: ghcr.io/wedigitek/we-services-reports:develop
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: keyvault-env
          mountPath: /mnt/keyvault-env
          readOnly: true
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        resources:
          requests:
            memory: "256Mi"
            cpu: "25m"
          limits:
            memory: "512Mi"
            cpu: "200m"
