applications/prd/reports/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reports
  namespace: reports-prd
  labels:
    app: reports
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3001
    protocol: TCP
    name: http
  selector:
    app: reports
