applications/prd/reports/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reports
  namespace: reports-prd
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  tls:
  - hosts:
    - reports.services.trywefood.dev
    secretName: reports-tls

  rules:
  - host: reports.services.trywefood.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reports
            port:
              number: 80
